--- a/src/assets/components/Navbar/Navbar.module.css
+++ b/src/assets/components/Navbar/Navbar.module.css
@@ -2,8 +2,7 @@
 
 .Navbar {
   width: 100vw;
-  background-color: hsl(239.43,49.76%,41.37%);;
-
+  background-color: hsl(239.43,49.76%,41.37%);
 }
 
 .Navbar-Component {
@@ -45,3 +44,72 @@
 }
 
 
+
+
+
+.button2 {
+  display: inline-block;
+  transition: all 0.2s ease-in;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+font-weight: 600;
+font-family: "Kanit" sans-serif;
+  color: #ffffff;
+  padding: 0.7em 1.7em;
+  cursor: pointer;
+  font-size: 18px;
+  border-radius: 0.5em;
+  background:hsl(32, 100%, 50%);
+ 
+}
+
+.button2:active {
+  color: #666;
+}
+
+.button2:before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%) scaleY(1) scaleX(1.25);
+  top: 100%;
+  width: 140%;
+  height: 180%;
+  background-color: rgba(0, 0, 0, 0.05);
+  border-radius: 50%;
+  display: block;
+  transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+  z-index: -1;
+}
+
+.button2:after {
+  content: "";
+  position: absolute;
+  left: 55%;
+  transform: translateX(-50%) scaleY(1) scaleX(1.45);
+  top: 180%;
+  width: 160%;
+  height: 190%;
+  background-color: #009087;
+  border-radius: 50%;
+  display: block;
+  transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+  z-index: -1;
+}
+
+.button2:hover {
+  color: #ffffff;
+}
+
+.button2:hover:before {
+  top: -35%;
+  background-color: #009087;
+  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+}
+
+.button2:hover:after {
+  top: -45%;
+  background-color: hsl(239.43,49.76%,41.37%);
+  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+}
