--- a/src/assets/components/Project/Project.module.css
+++ b/src/assets/components/Project/Project.module.css
@@ -1,3 +1,7 @@
+
+
+
+
 .Project {
   height: 94vh;
   width: 100vw;
@@ -11,7 +15,15 @@
   margin: 10px;
   margin-top: 0px;
 }
+
+.tracking-in-contract-bck-top {
+  -webkit-animation: tracking-in-contract-bck-top 1s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+          animation: tracking-in-contract-bck-top 1s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+}
+
+
 .projects-components {
+  margin-top: 40px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
@@ -66,8 +78,113 @@
   display: flex;
   justify-content: space-around;
 }
-.links > a {
-  color: rgb(255, 255, 255);
-  font-size: 20px;
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.flip-card {
+  background-color: transparent;
+  width: 440px;
+  height: 354px;
+  perspective: 1000px;
+  color: white;
+
+
+
+}
+
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+  box-shadow: 0 8px 14px 0 rgba(0,0,0,0.2);
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  border-radius: 1rem;
+}
+
+.flip-card-front {
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 2px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -1px 0px inset;
+  background-color: #ffffff;
+}
+
+.flip-card-back {
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 2px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -1px 0px inset;
+  background-color: #171717;
+  transform: rotateY(180deg);
+
+
+}
+
+.Main-content{
+  width: 100%;
+  height: 100%;
+    display: flex;
+justify-content: space-around;
+      gap: 20px;  flex-direction: column;
+  
+}
+
+.links{
+
+  display: flex;
+  justify-content: space-around;
+}
+
+
+.mainImg{
+  display:flex;
+width:100%;
+height: 100%;
+ border-radius: 1rem;
+  
+}
+
+.flip-card-back-head {
+  font-size: 26px;
+  
+}
+
+.flip-card-back-para{
+  font-size:18px;
+
+}
+
+
+.links > a{
+  margin: 0;
+  font-size: 16px;
+  color: red;
   text-decoration: none;
+  
 }
