--- a/src/index.css
+++ b/src/index.css
@@ -19,8 +19,7 @@ html{
 
 
 body{
-  background-color: rgb(121, 0, 0);
-
+    background-color: hsl(32, 100%, 50%);
     height: 200vh;
     width: 100%;
    
